--- a/book/ch04-07.html
+++ b/book/ch04-07.html
@@ -1,23 +1,22 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="en" class="dark" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>trustless betting and auctions - TimeLock Cryptographic Service</title>
+        <title>TLCS fs - TimeLock Cryptographic Service</title>
 
 
         <!-- Custom HTML head -->
         
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="icon" href="favicon.svg">
         <link rel="shortcut icon" href="favicon.png">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
 
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
@@ -29,13 +28,17 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="njmstyle.css">
 
+        <!-- MathJax -->
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
-    <body>
+    <body class="sidebar-visible no-js">
+    <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "";
-            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
+            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "ayu" : "dark";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
@@ -60,40 +63,69 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
-            html.classList.remove('no-js')
-            html.classList.remove('light')
+            html.classList.remove('dark')
             html.classList.add(theme);
-            html.classList.add('js');
+            var body = document.querySelector('body');
+            body.classList.remove('no-js')
+            body.classList.add('js');
         </script>
+
+        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
 
         <!-- Hide / unhide sidebar before it is displayed -->
         <script>
-            var html = document.querySelector('html');
-            var sidebar = 'hidden';
+            var body = document.querySelector('body');
+            var sidebar = null;
+            var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
                 try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
+            } else {
+                sidebar = 'hidden';
             }
-            html.classList.remove('sidebar-visible');
-            html.classList.add("sidebar-" + sidebar);
+            sidebar_toggle.checked = sidebar === 'visible';
+            body.classList.remove('sidebar-visible');
+            body.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ch01-01.html"><strong aria-hidden="true">1.</strong> Timelock Cryptographic Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch01-02.html"><strong aria-hidden="true">1.1.</strong> How It Works?</a></li><li class="chapter-item expanded "><a href="ch01-03.html"><strong aria-hidden="true">1.2.</strong> Security</a></li><li class="chapter-item expanded "><a href="ch01-04.html"><strong aria-hidden="true">1.3.</strong> Alpha Service Demo</a></li></ol></li><li class="chapter-item expanded "><a href="ch02-01.html"><strong aria-hidden="true">2.</strong> Formal Description</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch02-02.html"><strong aria-hidden="true">2.1.</strong> TLCS from NIZK</a></li><li class="chapter-item expanded "><a href="ch02-03.html"><strong aria-hidden="true">2.2.</strong> Efficient TLCS</a></li><li class="chapter-item expanded "><a href="ch02-04.html"><strong aria-hidden="true">2.3.</strong> Correctness</a></li><li class="chapter-item expanded "><a href="ch02-05.html"><strong aria-hidden="true">2.4.</strong> Security</a></li></ol></li><li class="chapter-item expanded "><a href="ch03-01.html"><strong aria-hidden="true">3.</strong> Implementation</a></li><li class="chapter-item expanded "><a href="ch04-01.html"><strong aria-hidden="true">4.</strong> Application and Use Cases</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch04-02.html"><strong aria-hidden="true">4.1.</strong> Timelock Encryption</a></li><li class="chapter-item expanded "><a href="ch04-03.html"><strong aria-hidden="true">4.2.</strong> Commitment</a></li><li class="chapter-item expanded "><a href="ch04-04.html"><strong aria-hidden="true">4.3.</strong> Expiring ZK Proofs</a></li><li class="chapter-item expanded "><a href="ch04-05.html"><strong aria-hidden="true">4.4.</strong> e-voting</a></li><li class="chapter-item expanded "><a href="ch04-06.html"><strong aria-hidden="true">4.5.</strong> time document release</a></li><li class="chapter-item expanded "><a href="ch04-07.html" class="active"><strong aria-hidden="true">4.6.</strong> trustless betting and auctions</a></li><li class="chapter-item expanded "><a href="ch04-08.html"><strong aria-hidden="true">4.7.</strong> escrow services</a></li><li class="chapter-item expanded "><a href="ch04-09.html"><strong aria-hidden="true">4.8.</strong> legal and compliance purposes</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="ch01-01.html"><strong aria-hidden="true">1.</strong> Timelock Cryptographic Service</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch01-02.html"><strong aria-hidden="true">1.1.</strong> How It Works?</a></li><li class="chapter-item expanded "><a href="ch01-03.html"><strong aria-hidden="true">1.2.</strong> Security</a></li><li class="chapter-item expanded "><a href="ch01-04.html"><strong aria-hidden="true">1.3.</strong> Alpha Service Demo</a></li></ol></li><li class="chapter-item expanded "><a href="ch02-01.html"><strong aria-hidden="true">2.</strong> Formal Description</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch02-02.html"><strong aria-hidden="true">2.1.</strong> TLCS from NIZK</a></li><li class="chapter-item expanded "><a href="ch02-03.html"><strong aria-hidden="true">2.2.</strong> Efficient TLCS</a></li><li class="chapter-item expanded "><a href="ch02-04.html"><strong aria-hidden="true">2.3.</strong> Correctness</a></li><li class="chapter-item expanded "><a href="ch02-05.html"><strong aria-hidden="true">2.4.</strong> Security Model</a></li><li class="chapter-item expanded "><a href="ch02-06.html"><strong aria-hidden="true">2.5.</strong> TLCS curves</a></li></ol></li><li class="chapter-item expanded "><a href="ch03-01.html"><strong aria-hidden="true">3.</strong> Implementation</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch03-02.html"><strong aria-hidden="true">3.1.</strong> TLCS - C++</a></li><li class="chapter-item expanded "><a href="ch03-03.html"><strong aria-hidden="true">3.2.</strong> TLCS - Rust</a></li></ol></li><li class="chapter-item expanded "><a href="ch04-01.html"><strong aria-hidden="true">4.</strong> Application and Use Cases</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ch04-02.html"><strong aria-hidden="true">4.1.</strong> Noun Project</a></li><li class="chapter-item expanded "><a href="ch04-03.html"><strong aria-hidden="true">4.2.</strong> Timelock Encryption</a></li><li class="chapter-item expanded "><a href="ch04-04.html"><strong aria-hidden="true">4.3.</strong> Commitment</a></li><li class="chapter-item expanded "><a href="ch04-05.html"><strong aria-hidden="true">4.4.</strong> Expiring ZK Proofs</a></li><li class="chapter-item expanded "><a href="ch04-06.html"><strong aria-hidden="true">4.5.</strong> E-voting</a></li><li class="chapter-item expanded "><a href="ch04-07.html" class="active"><strong aria-hidden="true">4.6.</strong> TLCS fs</a></li><li class="chapter-item expanded "><a href="ch04-08.html"><strong aria-hidden="true">4.7.</strong> Trustless betting and auctions</a></li><li class="chapter-item expanded "><a href="ch04-09.html"><strong aria-hidden="true">4.8.</strong> Escrow services</a></li><li class="chapter-item expanded "><a href="ch04-10.html"><strong aria-hidden="true">4.9.</strong> Legal and compliance purposes</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
+
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
 
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
-                        <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+                        <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
-                        </button>
+                        </label>
                         <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                             <i class="fa fa-paint-brush"></i>
                         </button>
@@ -112,9 +144,6 @@
                     <h1 class="menu-title">TimeLock Cryptographic Service</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
-                            <i id="print-button" class="fa fa-print"></i>
-                        </a>
 
                     </div>
                 </div>
@@ -141,7 +170,39 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="trustless-betting-and-auctions"><a class="header" href="#trustless-betting-and-auctions">trustless betting and auctions</a></h1>
+                        <h1 id=""><a class="header" href="#"></a></h1>
+<h1 id="timelockfs"><a class="header" href="#timelockfs">timelock.fs</a></h1>
+<p><code>timelock.fs</code> is an extension for the <a href="https://www.timelock.zone">timelock.zone</a> service that enables to encrypt to the future and decrypts any file using Windows Explorer.
+See also <a href="https://github.com/aragonzkresearch/tlcs-c/">tlcs-c</a>, <a href="https://github.com/aragonzkresearch/tlcs-rust/">tlcs-rust</a>, <a href="https://github.com/vincenzoiovino/Timelock.zone.AndroidExample">Timelock.zone.AndroidExample</a>, <a href="https://github.com/vincenzoiovino/timelock.public.disclosure">timelock.public.disclosure</a> and <a href="https://github.com/aragonzkresearch/tlcs-c/blob/main/examples/howtoencrypt.md">TLCS Usage</a>.</p>
+<p>Disclaimer: currently we used a very old version of <code>bouncycastle</code> for simplicity and we did not care about enforcing more stringent level of security for <code>ECIES</code>. This repo is only for testing <code>timelock.zone</code> functionalities. You can easy adapt all code to any <code>bouncycastle</code> version and different <code>ECIES</code> variant. </p>
+<h2 id="installation"><a class="header" href="#installation">Installation</a></h2>
+<h3 id="install-from-source"><a class="header" href="#install-from-source">Install from source</a></h3>
+<p>Add as dependencies <code>bcprov-jdk15on-168.jar</code>, <code>json-simple-1.1.jar</code> and <a href="https://github.com/vincenzoiovino/TimelockJavaAPI/tree/main"><code>timelock.zone.jar</code></a>.
+Use <code>Java</code> tools or any IDE to build from the source code a runnable Jar file named <code>timelock.fs.jar</code> and stores it in the <code>bin</code> folder or in any other folder: the only requirement is that the files <a href="https://github.com/vincenzoiovino/timelock.fs/blob/main/bin/install.bat"><code>install.bat</code></a> and <a href="https://github.com/vincenzoiovino/timelock.fs/blob/main/bin/uninstall.bat"><code>uninstall.bat</code></a> must reside in the same folder as the runnable Jar you created.
+Edit the file <code>install.bat</code> with any editor (e.g. Notepad) and change the line:</p>
+<pre><code class="language-bash">setx YOUR_JAVA &quot;C:\Program Files\Java\jdk-15.0.2&quot;
+</code></pre>
+<p>to:</p>
+<pre><code class="language-bash">setx YOUR_JAVA &quot;Path&quot;
+</code></pre>
+<p>where <code>Path</code> is a path to your Java Runtime Environment (<code>JRE</code>) installation you used for the compilation.
+You can download JREs from <a href="https://www.oracle.com/java/technologies/downloads/">here</a>. Usually <code>Path</code> has the form <code>C:\Program Files\Java\jdk-XX.Y.Z</code>. If your <code>JRE</code> is installed correctly you should have a file <code>javaw.exe</code> under the folder <code>Path\bin</code>.
+Once you edited the file <code>install.bat</code> as described before, you can run <code>install.bat</code>, grant admin permissions (needed to install the Windows extensions) and you are done.</p>
+<h3 id="install-without-compilation"><a class="header" href="#install-without-compilation">Install without compilation</a></h3>
+<p>Download the file <a href="https://github.com/vincenzoiovino/timelock.fs/blob/main/timelock.fs.zip"><code>timelock.fs.zip</code></a> and unzip it.  The so created folder <code>timelock.fs</code> contains (among others) a file named <code>install.bat</code>.
+Download <a href="https://jdk.java.net/archive/">JDK 17</a> or higher if you do not have already <code>JDK</code>/<code>JRE</code> installed.
+Run <code>install.bat</code>, grant admin permissions (needed to install the Windows extensions) and you are done.</p>
+<h4 id="installation-issues"><a class="header" href="#installation-issues">Installation issues</a></h4>
+<p>The Jar <code>timelock.fs.jar</code> in the file <code>timelock.fs.zip</code> has been compiled with Java Runtime Environment (<code>JRE</code>) 17. If the installation does not work it is because you could have an older <code>JRE</code>. In such case, download <code>JRE</code> 17 (see above) and set <code>JAVA_HOME</code> environment variable to point to the new <code>JRE</code> folder. Another reason of installation failure could be that <code>JAVA_HOME</code> is not set at all, in such case set it to point to your <code>JRE</code> folder.</p>
+<h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
+<h3 id="encrypt-to-the-future"><a class="header" href="#encrypt-to-the-future">Encrypt to the future</a></h3>
+<p>You can right click on any file, e.g. <code>MyFile.pdf</code>, in Windows Explorer, select <code>Show more options</code> (this may depend on your Windows version) and then click on <code>timelock.fs.encrypt</code>.
+You will be prompted to choose a date in the future in the format DD/MM/YYYY and an hour. Then you will just have to click on the <code>Encrypt</code> button. It will be created a file <code>MyFile.pdf.tlcs</code> that contains the encrypted version of the file <code>MyFile.pdf</code>. You can now delete the original file <code>MyFile.pdf</code> if you want to hide it until the chosen day.</p>
+<h3 id="decrypt"><a class="header" href="#decrypt">Decrypt</a></h3>
+<p>The encrypted file is protected until the day before the chosen date.
+When the chosen day and hour is reached you can right click on the file <code>MyFile.pdf.tlcs</code>, select <code>Show more options</code> (this may depend on your Windows version) and then click on <code>timelock.fs.decrypt</code>. Your file will be decrypted and you will recover the file <code>MyFile.pdf</code>.</p>
+<h2 id="uninstall"><a class="header" href="#uninstall">Uninstall</a></h2>
+<p>To uninstall the <code>timelock.fs</code> extensions, run <a href="https://github.com/vincenzoiovino/timelock.fs/blob/main/bin/uninstall.bat"><code>uninstall.bat</code></a> (you must grant admin permissions) from the same folder where you launched <code>install.bat</code>.</p>
 
                     </main>
 
@@ -151,7 +212,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="ch04-08.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="ch04-08.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -165,7 +226,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="ch04-08.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="ch04-08.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -191,5 +252,6 @@
         <!-- Custom JS scripts -->
 
 
+    </div>
     </body>
 </html>
